--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This is an official list of all contributors to this repository
 
 Chesachi Victor Kalu <chesahkalu@gmail.com>
-Reuel Jethro Dangiwa <reueldangiwa@gmail.com>
+Reuel Yunana Dangiwa <reueldangiwa@gmail.com>
 ~                                             
